背景/ボタン表示

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,1 +1,18 @@
-<h1>aaaaaa<h1>
+<main class="registrations-top">
+  <section class="left-contents">
+  <%= image_tag 'registrations-top1.jpg', class:'registrations-image' %>
+
+    <%# <img src="../images/devise/registrations-top.jpg" alt="registrations-top"> %>
+    <%# <div></div> %>
+  </section>
+  <section class="right-contents">
+    <div class="right-title">wanday!へようこそ！</div>
+    <p>アカウント作成</p>
+    <div>
+      <button class="email-button">メールアドレスで登録</button>
+      <button class="google-button">Googleアカウントで登録</button>
+      <button class="facebook-button">Facebookアカウントで登録</button>
+    </div>
+  </section>
+</main>
+
