--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,21 @@
 <main class="registrations-top">
   <section class="left-contents">
-  <%= image_tag 'registrations-top1.jpg', class:'registrations-image' %>
-
-    <%# <img src="../images/devise/registrations-top.jpg" alt="registrations-top"> %>
-    <%# <div></div> %>
+    <%= image_tag 'registrations-top1.jpg', class:'registrations-image' %>  
   </section>
   <section class="right-contents">
-    <div class="right-title">wanday!へようこそ！</div>
-    <p>アカウント作成</p>
-    <div>
-      <button class="email-button">メールアドレスで登録</button>
-      <button class="google-button">Googleアカウントで登録</button>
-      <button class="facebook-button">Facebookアカウントで登録</button>
+    <div class="right-title">
+      <p>wanday!へようこそ！</p>
+    </div>
+    <div class="right-sub-title">
+      <p>アカウント作成</p>
+    </div>
+    <div class="registrations-button">
+      <a class="email-button" href="#">メールアドレスで登録</a>
+      <a class="google-button" href="#">Googleアカウントで登録</a>
+      <a class="facebook-button" href="#">Facebookアカウントで登録</a>
+    </div>
+    <div class="right-text">
+      <p><a class="login-text" href="#">ログイン</a>のかたはこちら</p>
     </div>
   </section>
 </main>
