--- a/app/assets/stylesheets/devise/new.css
+++ b/app/assets/stylesheets/devise/new.css
@@ -103,3 +103,26 @@
   height: 60px;
   line-height: 60px;
 }
+
+.registrations-footer > p {
+  color: #ffffff;
+  text-align: center;
+  width: 100%;
+  height: 15%;
+}
+
+.footer-title {
+  font-size: 30px;
+  font-family: "Caveat", cursive;
+  font-weight: 700;
+  color: #ffffff;
+  text-align: center;
+  margin-top: 50px;
+}
+
+.footer-text {
+  font-size: 10px;
+  text-align: center;
+  color: #ffffff;
+  margin-top: 5px;
+}
