--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <main class="registrations-top">
   <section class="left-contents">
-    <%= image_tag 'registrations-top1.jpg', class:'registrations-image' %>  
+    <%= image_tag 'registrations-top.jpg', class:'registrations-image' %>  
   </section>
   <section class="right-contents">
     <div class="right-title">
@@ -17,6 +17,10 @@
     <div class="right-text">
       <p><a class="login-text" href="#">ログイン</a>のかたはこちら</p>
     </div>
+    <footer>
+      <p class="footer-title">wanday!</p>
+      <p class="footer-text">Copyright © 2021 wanday! All rights reserved.</p>
+    </footer>
   </section>
 </main>
 
