--- a/app/assets/stylesheets/devise/new.css
+++ b/app/assets/stylesheets/devise/new.css
@@ -23,11 +23,8 @@
 
 .right-title {
   color: #ffffff;
-  font-family: "Arial Black";
-  font-size: 48px;
-  font-weight: 900;
+  font: 900 48px/1.4 "Arial Black";
   height: auto;
-  line-height: 1.4;
   text-align: center;
   width: auto;
   max-width: 100%;
@@ -37,11 +34,8 @@
 
 .right-sub-title {
   color: #aa998a;
-  font-family: "Noto Sans JP";
-  font-size: 28px;
-  font-weight: 700;
+  font: 700 28px/1.4 "Noto Sans JP";
   height: auto;
-  line-height: 1.4;
   text-align: center;
   width: auto;
   max-width: 100%;
@@ -76,10 +70,7 @@
   background: #ffffff;
   border-radius: 4px;
   width: 50%;
-  border-bottom: 1px solid #000;
-  border-left: 1px solid #000;
-  border-right: 1px solid #000;
-  border-top: 1px solid #000;
+  border: 1px solid #000;
 }
 
 .facebook-button {
@@ -112,17 +103,15 @@
 }
 
 .footer-title {
-  font-size: 30px;
-  font-family: "Caveat", cursive;
-  font-weight: 700;
   color: #ffffff;
   text-align: center;
   margin-top: 50px;
+  font: 700 30px "Caveat", cursive;
 }
 
 .footer-text {
   font-size: 10px;
   text-align: center;
   color: #ffffff;
-  margin-top: 5px;
+  margin-top: 2px;
 }
