newページタイトル作成

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,26 +1,18 @@
-<main class="registrations-top">
-  <section class="left-contents">
-    <%= image_tag 'registrations-top.jpg', class:'registrations-image' %>  
+<main class="registrations-new">
+  <h1 class="new-title">wanday!へようこそ！</h1>
+  <section>
+    <form class="new-contents">
+      <h2 class="form-title">アカウント作成</h2>
+      <input type="text" placeholder="名前" class="small-field">
+      <input type="text" placeholder="メールアドレス" class="small-field">
+      <input type="text" placeholder="パスワード" class="small-field">
+      <input type="submit" value="次へ" class="send">
+    </form>
   </section>
-  <section class="right-contents">
-    <div class="right-title">
-      <p>wanday!へようこそ！</p>
-    </div>
-    <div class="right-sub-title">
-      <p>アカウント作成</p>
-    </div>
-    <div class="registrations-button">
-      <a class="email-button" href="#">メールアドレスで登録</a>
-      <a class="google-button" href="#">Googleアカウントで登録</a>
-      <a class="facebook-button" href="#">Facebookアカウントで登録</a>
-    </div>
-    <div class="right-text">
-      <p><a class="login-text" href="#">ログイン</a>のかたはこちら</p>
-    </div>
+  <section>
     <footer>
       <p class="footer-title">wanday!</p>
       <p class="footer-text">Copyright © 2021 wanday! All rights reserved.</p>
     </footer>
   </section>
 </main>
-
