--- a/app/assets/stylesheets/devise/new.css
+++ b/app/assets/stylesheets/devise/new.css
@@ -14,6 +14,61 @@
 }
 
 .new-contents {
+  text-align: center;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+}
+
+.new-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 120px;
+}
+.new-content > label {
+  display: block;
+  width: 20%;
+  padding: 0 10px 30px 0;
+  font-size: 16px;
+  color: #aa998a;
+}
+
+.small-field {
+  /* display: block; */
+  background: #ffffff;
+  border-radius: 4px;
+  flex: none;
+  height: 50px;
+  width: 80%;
+  max-width: 100%;
+  margin-bottom: 30px;
+  text-align: left;
+  padding: 0 10px;
+}
+
+.send {
+  /* align-content: center; */
+  /* align-items: center; */
+  background: #9ec3bc;
+  border-radius: 4px;
+  /* flex: none; */
+  /* flex-direction: column; */
+  /* flex-wrap: nowrap; */
+  height: 50px;
+  line-height: 50px;
+  /* justify-content: center; */
+  /* margin: 40px 0px 0px 0px; */
+  width: 15%;
+  max-width: 100%;
+  /* text-align: center; */
+  margin: auto;
+  display: block;
+  color: #ffffff;
+  font-weight: bold;
 }
 
 .form-title {
@@ -24,6 +79,7 @@
   width: 100%;
   max-width: 100%;
   justify-content: center;
+  margin-bottom: 50px;
 }
 
 .footer-title {
