--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,22 +1,27 @@
 <main class="registrations-new">
   <h1 class="new-title">wanday!へようこそ！</h1>
   <section>
-    <form class="new-contents">
+    <div class="new-contents">
       <h2 class="form-title">アカウント作成</h2>
-      <div class="new-content">
-        <label for="name">名前</label>
-        <input type="text" placeholder="例）鈴木太郎" class="small-field" id="name">
-      </div>
-      <div class="new-content">
-        <label for="email">メールアドレス</label>
-        <input type="text" placeholder="携帯/PC" class="small-field" id="email">
-      </div>
-      <div class="new-content">
-        <label for="password">パスワード</label>
-        <input type="text" placeholder="半角英数混合" class="small-field" id="password">
-      </div>
-      <input type="submit" value="次へ" class="send">
-    </form>
+
+      <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
+      <%= render "devise/shared/error_messages", model: f.object %>
+
+        <div class="new-content">
+          <%= f.label :name,'名前' %>
+          <%= f.text_area :name, class:"small-field", id:"name", placeholder:"例）鈴木太郎", maxlength:"40", autofocus: true  %>
+        </div>
+        <div class="new-content">
+          <%= f.label :email,'メールアドレス' %><br />
+          <%= f.email_field :email, class:"small-field", id:"email", placeholder:"PC・携帯どちらでも可" %>
+        </div>
+        <div class="new-content">
+          <%= f.label :password,'パスワード' %><br />
+          <%= f.password_field :password, class:"small-field", id:"password", placeholder:"6文字以上の半角英数字" %>
+        </div>
+        <%= f.submit "次へ" ,class:"send" %>
+      <%end%>
+    </div>
   </section>
   <section>
     <footer>
