--- a/app/assets/stylesheets/devise/new.css
+++ b/app/assets/stylesheets/devise/new.css
@@ -31,7 +31,7 @@
   display: block;
   width: 20%;
   padding: 0 10px 30px 0;
-  font-size: 16px;
+  font-size: 12px;
   color: #aa998a;
 }
 
@@ -83,4 +83,17 @@
   text-align: center;
   color: #ffffff;
   margin-top: 2px;
+}
+
+.field_with_errors {
+  display: contents;
+  color: #aa998a;
+}
+
+.field_with_errors > label {
+  display: block;
+  width: 20%;
+  padding: 0 10px 30px 0;
+  font-size: 12px;
+  color: #aa998a;
 }
