--- a/app/views/devise/registrations/new_account.erb
+++ b/app/views/devise/registrations/new_account.erb
@@ -1,22 +1,40 @@
 <main class="registrations-new">
   <h1 class="new-title">wanday!へようこそ！</h1>
   <section>
-    <form class="new-contents">
+    <div class="new-contents">
       <h2 class="form-title">アカウント作成</h2>
+
+      <%= form_with model: @account, url: account_path, local: true do |f| %>
+      <%= render "devise/shared/error_messages", model: f.object %>
+
       <div class="new-content">
-        <label for="name">ユーザー名</label>
-        <input type="text" placeholder="例）すずき" class="small-field" id="name">
+        <%= f.label :nickname,'ユーザー名' %>
+        <%= f.text_area :nickname, class:"small-field", id:"nickname", placeholder:"例）すずき", maxlength:"40", autofocus: true  %>
       </div>
       <div class="new-content">
-        <label for="email">ユーザーID</label>
-        <input type="text" placeholder="例）suzuki123" class="small-field" id="email">
+        <%= f.label :account_id,'ユーザーID' %>
+        <%= f.text_area :account_id, class:"small-field", id:"account_id", placeholder:"例）suzuki123", maxlength:"40"%>
+      
       </div>
       <div class="new-content">
-        <label for="password">生年月日</label>
-        <input type="text" placeholder="例）20000101" class="small-field" id="password">
+        <%= f.label :birthday,'生年月日' %>
+        <%= f.text_area :birthday, class:"small-field", id:"birthday"%>
+
+      <%# <%= 
+                  f.date_select(
+                    :birth_date,
+                    class:'small-field', 
+                    id:"birth-date",
+                    use_month_numbers: true,
+                    prompt:'--',
+                    start_year: 1930,
+                    end_year: (Time.now.year - 5),
+                    date_separator: '%s')%> 
+        <%# <input type="text" placeholder="例）20000101" class="small-field" id="password"> %>
       </div>
       <input type="submit" value="登録する" class="send">
-    </form>
+      <%end%>
+    </div>
   </section>
   <section>
     <footer>
