create編集（アカウント登録）

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
 
         <div class="new-content">
           <%= f.label :name,'名前' %>
-          <%= f.text_area :name, class:"small-field", id:"name", placeholder:"例）鈴木太郎", maxlength:"40", autofocus: true  %>
+          <%= f.text_field :name, class:"small-field", id:"name", placeholder:"例）鈴木太郎", maxlength:"40", autofocus: true  %>
         </div>
         <div class="new-content">
           <%= f.label :email,'メールアドレス' %><br />
