--- a/app/assets/stylesheets/devise/new_account.css
+++ b/app/assets/stylesheets/devise/new_account.css
@@ -84,3 +84,14 @@
   color: #ffffff;
   margin-top: 2px;
 }
+
+.new-content > select {
+  width: 26%;
+  height: 50px;
+  padding-left: 10px;
+  border-radius: 4px;
+  background: #fff;
+  font-size: 12px;
+  cursor: pointer;
+  margin-bottom: 30px;
+}
