--- a/app/views/devise/registrations/new_account.erb
+++ b/app/views/devise/registrations/new_account.erb
@@ -9,27 +9,25 @@
 
       <div class="new-content">
         <%= f.label :nickname,'ユーザー名' %>
-        <%= f.text_area :nickname, class:"small-field", id:"nickname", placeholder:"例）すずき", maxlength:"40", autofocus: true  %>
+        <%= f.text_field :nickname, class:"small-field", id:"nickname", placeholder:"例）すずき", maxlength:"40", autofocus: true  %>
       </div>
       <div class="new-content">
         <%= f.label :account_id,'ユーザーID' %>
-        <%= f.text_area :account_id, class:"small-field", id:"account_id", placeholder:"例）suzuki123", maxlength:"40"%>
+        <%= f.text_field :account_id, class:"small-field", id:"account_id", placeholder:"例）suzuki123", maxlength:"40"%>
       
       </div>
       <div class="new-content">
         <%= f.label :birthday,'生年月日' %>
-        <%= f.text_area :birthday, class:"small-field", id:"birthday"%>
+        <%# f.text_area :birthday, class:"small-field", id:"birthday"%>
 
-      <%# <%= 
-                  f.date_select(
-                    :birth_date,
-                    class:'small-field', 
-                    id:"birth-date",
-                    use_month_numbers: true,
-                    prompt:'--',
-                    start_year: 1930,
-                    end_year: (Time.now.year - 5),
-                    date_separator: '%s')%> 
+      <%= f.date_select(:birthday,
+            class:'input-birth-wrap', 
+            id:"birthday",
+            use_month_numbers: true,
+            prompt:'--',
+            start_year: 1950,
+            end_year: (Time.now.year - 5),
+            date_separator: '/') %>
         <%# <input type="text" placeholder="例）20000101" class="small-field" id="password"> %>
       </div>
       <input type="submit" value="登録する" class="send">
