--- a/app/views/devise/registrations/create_account.html.erb
+++ b/app/views/devise/registrations/create_account.html.erb
@@ -7,6 +7,10 @@
       <p>登録が完了しました。</p>
       <p>wanday!のサービスをお楽しみください。</p>
     </div>
+    <div class="regist-create-button">
+      <%= link_to "TOPページへ", root_path, class: "regist-top-link" %>
+    </div>
+
   </section>
   <section>
     <footer>
