バリデーション修正

--- a/app/views/devise/registrations/new_account.erb
+++ b/app/views/devise/registrations/new_account.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="new-content">
         <%= f.label :account_id,'ユーザーID' %>
-        <%= f.text_field :account_id, class:"small-field", id:"account_id", placeholder:"例）suzuki123", maxlength:"40"%>
+        <%= f.text_field :account_id, class:"small-field", id:"account_id", placeholder:"半角英数字で入力してください（記号は使用不可）", maxlength:"40"%>
       
       </div>
       <div class="new-content">
