--- a/app/assets/stylesheets/devise/new_account.css
+++ b/app/assets/stylesheets/devise/new_account.css
@@ -74,7 +74,7 @@
 .footer-title {
   color: #ffffff;
   text-align: center;
-  margin-top: 50px;
+  /* margin-top: 50px; */
   font: 700 30px "Caveat", cursive;
 }
 
