--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -7,14 +7,14 @@
   <section>
     <div class="posts-new-contents">
       <h1 class="form-title">写真を投稿する</h1>
-      <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
-      <%# render "devise/shared/error_messages", model: f.object %>
+      <%= form_with model: @post, local: true do |f| %>
+      <%= render "devise/shared/error_messages", model: f.object %>
+
       <div class="img-field">
         <p>
           クリックして写真をアップロード
         </p>
-        <%= f.file_field :images, name: 'item[images][]',id:"item-image" %>
-        <div id="image-list"></div>
+        <%= f.file_field :image, id:"posts-image" %>
       </div>
         <div class="posts-new-content">
           <%= f.text_area :caption, class:"caption-field", id:"caption", placeholder:"キャプションを書く", maxlength:"250" %>
