--- a/app/views/posts/create.html.erb
+++ b/app/views/posts/create.html.erb
@@ -6,14 +6,15 @@
   </section>
   <section>
     <div class="posts-new-contents">
-      <h1 class="form-title">投稿が完了しました</h1>
+      <h1 class="form-title">投稿が完了しました。</h1>
+      <div class="regist-create-button">
+      <%= link_to "編集する", "#", class: "regist-button" %>
     </div>
     <div class="regist-create-button">
-      <%= link_to "編集する", "#", class: "regist-top-link" %>
+      <%= link_to "HOMEへ戻る", root_path, class: "regist-button" %>
     </div>
-    <div class="regist-create-button">
-      <%= link_to "HOMEへ戻る", root_path, class: "regist-top-link" %>
     </div>
+    
   </section>
   <section>
     <footer class="top-page-header">
