--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -14,6 +14,8 @@
         <p>
           クリックして写真をアップロード
         </p>
+        <div id="image-list"></div>
+
         <%= f.file_field :image, id:"posts-image" %>
       </div>
         <div class="posts-new-content">
