--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -234,7 +234,7 @@ textarea {
   font: inherit;
   background: transparent;
   padding: 0;
-  margin: 0;
+  /* margin: 0; */
   outline: 0;
   border-radius: 0;
   text-align: inherit;
