--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <%= csp_meta_tag %>
     <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/nicolas-cusan/destyle.css/master/destyle.css">
     <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet">
     <script src="https://www.google.com/recaptcha/api.js" async defer></script> 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
