--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -10,13 +10,25 @@
       <%= form_with model: @post, local: true do |f| %>
       <%= render "devise/shared/error_messages", model: f.object %>
 
-      <div class="img-field">
-        <p>
+      <div class="img-field" id="image-list">
+
+
+        <%# <div id="image-list"></div> %>
+          <% @post.images.each do |image| %>
+            <%= image_tag image, class: 'images' %>
+          <% end %>
+
+
+    <label class="form-image">
+            <p>
           クリックして写真をアップロード
         </p>
-        <div id="image-list"></div>
+      <%# <span class="image-file">画像</span> %>
+        <i class="fas fa-images fa-2x "></i>
+        <%= f.file_field :images, id:"posts-image" ,name: 'post[images][]' ,class: "hidden",multiple: true%>
+    </label>
 
-        <%= f.file_field :image, id:"posts-image" %>
+
       </div>
         <div class="posts-new-content">
           <%= f.text_area :caption, class:"caption-field", id:"caption", placeholder:"キャプションを書く", maxlength:"250" %>
