--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -27,7 +27,7 @@
       <div class="posts-new-content">
         <%= f.text_area :caption, class:"caption-field", id:"caption", placeholder:"キャプションを書く", maxlength:"250" %>
       </div>
-        <%= f.submit "投稿する" ,class:"posts-new-send" %>
+        <%= f.submit "編集する" ,class:"posts-new-send" %>
       <%end%>
     </div>
   </section>
