--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -13,7 +13,7 @@
       <div class="img-field" id="image-list">
         <%# <div id="image-list"></div> %>
           <% @post.images.each do |image| %>
-            <%= image_tag image, class: 'images' %>
+            <%= image_tag image, class: 'new-images' %>
           <% end %>
 
     <label class="form-image">
