時刻表記変更

--- a/app/assets/stylesheets/posts/show.css
+++ b/app/assets/stylesheets/posts/show.css
@@ -35,6 +35,12 @@
   align-items: center;
 }
 
+.show-data {
+  font-size: 10px;
+  color: #aa998a;
+  text-align: end;
+}
+
 .show-sub-content {
   height: 10%;
   width: 100%;
