--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -31,6 +31,16 @@
         <i class="far fa-heart fa-2x"></i>
         <p>いいね 10件</p>
       </div>
+
+      <%# コメントがあれば %>
+      <div class="comment-box" id="comment-box">  <%# idを追加する %>
+        <div id="comments">
+          <div class="comment">
+            <div class="user-info">テストユーザー</div>
+            <p>テストコメント</p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <section>
