アイコン位置修正

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -2,6 +2,14 @@
   <section>
     <header class='top-page-header1'>
       <p class="header-title1">wanday!</p>
+      <nav>
+        <i class="fas fa-home fa-lg user-icon"></i>
+        <i class="fas fa-search fa-lg user-icon"></i>
+        <i class="far fa-envelope fa-lg user-icon"></i>
+        <i class="far fa-bell fa-lg user-icon"></i>
+        <i class="far fa-images fa-lg user-icon"></i>
+        <%= image_tag "34a08c028c70f36dbfafc205d16db1ff.png" ,class: "header-user-icon"%>
+      </nav>
     </header>
 
 <%# <header class='top-page-header1'>
