--- a/app/assets/stylesheets/home/show.css
+++ b/app/assets/stylesheets/home/show.css
@@ -112,3 +112,25 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.header-user-icon {
+  height: 90%;
+  width: auto;
+  border-radius: 50%;
+  background-color: cornflowerblue;
+  margin-right: 50px;
+}
+
+.top-page-header1 > nav {
+  height: 100%;
+  width: auto;
+  /* text-align: right; */
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.user-icon {
+  margin-right: 15px;
+  color: #aa998a;
+}
