アイコンにリンク指定

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -7,29 +7,12 @@
         <i class="fas fa-search fa-lg user-icon"></i>
         <i class="far fa-envelope fa-lg user-icon"></i>
         <i class="far fa-bell fa-lg user-icon"></i>
-        <i class="far fa-images fa-lg user-icon"></i>
+        <%= link_to new_post_path do %>
+          <i class="far fa-images fa-lg user-icon"></i>
+        <% end %>
         <%= image_tag "34a08c028c70f36dbfafc205d16db1ff.png" ,class: "header-user-icon"%>
       </nav>
     </header>
-
-<%# <header class='top-page-header1'>
-      <div class="header-title1">wanday!</div>
-      <nav>
-        <i class="fas fa-home fa-lg"></i>
-        <i class="fas fa-search fa-lg"></i>
-        <i class="far fa-envelope fa-lg"></i>
-        <i class="far fa-bell fa-lg"></i>
-        <i class="far fa-images fa-lg"></i>
-        <%= image_tag "34a08c028c70f36dbfafc205d16db1ff.png" ,class: "mypage-user-icon"%>
-      <%# </nav> %>
-
-      <%# <p class="header-title">wanday!</p> %>
-
-    <%# </header> %> 
-
-
-
-
   </section>
   <section>
     <div class="mypage-contents">
