--- a/app/views/posts/update.html.erb
+++ b/app/views/posts/update.html.erb
@@ -1,9 +1,5 @@
 <main class="posts-new">
-  <section>
-    <header class='top-page-header'>
-      <p class="header-title">wanday!</p>
-    </header>
-  </section>
+  <%= render 'shared/header' %>
   <section>
     <div class="posts-new-contents">
       <h1 class="form-title">編集が完了しました。</h1>
