footer部分テンプレート化

--- a/app/views/devise/registrations/create_account.html.erb
+++ b/app/views/devise/registrations/create_account.html.erb
@@ -12,10 +12,5 @@
     </div>
 
   </section>
-  <section>
-    <footer>
-      <p class="footer-title">wanday!</p>
-      <p class="footer-text">Copyright © 2021 wanday! All rights reserved.</p>
-    </footer>
-  </section>
+  <%= render 'shared/footer' %>
 </main>
