--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -49,10 +49,5 @@
       </div>
     </div>
   </section>
-  <section>
-    <footer class="top-page-header">
-      <p class="footer-title">wanday!</p>
-      <p class="footer-text">Copyright © 2021 wanday! All rights reserved.</p>
-    </footer>
-  </section>
+  <%= render 'shared/footer' %>
 </main>
