--- a/app/views/devise/registrations/new_account.erb
+++ b/app/views/devise/registrations/new_account.erb
@@ -34,10 +34,5 @@
       <%end%>
     </div>
   </section>
-  <section>
-    <footer>
-      <p class="footer-title">wanday!</p>
-      <p class="footer-text">Copyright © 2021 wanday! All rights reserved.</p>
-    </footer>
-  </section>
+  <%= render 'shared/footer' %>
 </main>
