ヘッダー修正

--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -21,7 +21,7 @@
 }
 
 .header-user-icon {
-  height: 90%;
+  height: 70px;
   width: auto;
   border-radius: 50%;
   background-color: cornflowerblue;
